[JAEGER] Fixed copyDataIntoReg() not invalidating on uncopy (bug 582884).